--- a/lc_rsfmri_struct.ipynb
+++ b/lc_rsfmri_struct.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -58,6 +58,21 @@
     "#method = np.load(method_file)[()]\n",
     "#pars = np.load(par_file)[()]\n",
     "#TR = pars['VisuAcqRepetitionTime']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "out_dir = '/home/julia/projects/lc/processed/LC_rsfMRI_07/'\n",
+    "struct_file = out_dir +  '46.nii.gz'\n",
+    "mp_struct_data = nb.load(struct_file).get_data()\n",
+    "struct_affine = nb.load(struct_file).affine\n",
+    "struct_header = nb.load(struct_file).header"
    ]
   },
   {
@@ -147,79 +162,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "181011-14:31:17,726 interface INFO:\n",
-      "\t stderr 2018-10-11T14:31:17.726355:\u001b[7m*+ WARNING:\u001b[0m   If you are performing spatial transformations on an oblique dset, \n",
-      "181011-14:31:17,728 interface INFO:\n",
-      "\t stderr 2018-10-11T14:31:17.726355:  such as /home/julia/projects/lc/JH_LC_rsfMRI_03_analysis/struct/single_vols/struct_vol0_corrected.nii.gz,\n",
-      "181011-14:31:17,731 interface INFO:\n",
-      "\t stderr 2018-10-11T14:31:17.726355:  or viewing/combining it with volumes of differing obliquity,\n",
-      "181011-14:31:17,734 interface INFO:\n",
-      "\t stderr 2018-10-11T14:31:17.726355:  you should consider running: \n",
-      "181011-14:31:17,737 interface INFO:\n",
-      "\t stderr 2018-10-11T14:31:17.726355:     3dWarp -deoblique \n",
-      "181011-14:31:17,737 interface INFO:\n",
-      "\t stderr 2018-10-11T14:31:17.726355:  on this and  other oblique datasets in the same session.\n",
-      "181011-14:31:17,741 interface INFO:\n",
-      "\t stderr 2018-10-11T14:31:17.726355: See 3dWarp -help for details.\n",
-      "181011-14:31:17,743 interface INFO:\n",
-      "\t stderr 2018-10-11T14:31:17.726355:++ Oblique dataset:/home/julia/projects/lc/JH_LC_rsfMRI_03_analysis/struct/single_vols/struct_vol0_corrected.nii.gz is 5.873095 degrees from plumb.\n",
-      "181011-14:32:26,303 interface INFO:\n",
-      "\t stderr 2018-10-11T14:32:26.303792:3dSkullStrip: Pushing to Edge ...\n",
-      "181011-14:32:41,848 interface INFO:\n",
-      "\t stderr 2018-10-11T14:32:41.848159:The intensity in the output dataset is a modified version\n",
-      "181011-14:32:41,852 interface INFO:\n",
-      "\t stderr 2018-10-11T14:32:41.848159:of the intensity in the input volume.\n",
-      "181011-14:32:41,856 interface INFO:\n",
-      "\t stderr 2018-10-11T14:32:41.856101:To obtain a masked version of the input with identical values inside\n",
-      "181011-14:32:41,858 interface INFO:\n",
-      "\t stderr 2018-10-11T14:32:41.856101:the brain, you can either use 3dSkullStrip's -orig_vol option\n",
-      "181011-14:32:41,861 interface INFO:\n",
-      "\t stderr 2018-10-11T14:32:41.856101:or run the following command:\n",
-      "181011-14:32:41,863 interface INFO:\n",
-      "\t stderr 2018-10-11T14:32:41.856101:  3dcalc -a /home/julia/projects/lc/JH_LC_rsfMRI_03_analysis/struct/single_vols/struct_vol0_corrected.nii.gz -b /home/julia/projects/lc/JH_LC_rsfMRI_03_analysis/struct/struct_mask.nii.gz+orig -expr 'a*step(b)' \\\n",
-      "181011-14:32:41,877 interface INFO:\n",
-      "\t stderr 2018-10-11T14:32:41.856101:         -prefix /home/julia/projects/lc/JH_LC_rsfMRI_03_analysis/struct/struct_mask.nii.gz_orig_vol\n",
-      "181011-14:32:41,880 interface INFO:\n",
-      "\t stderr 2018-10-11T14:32:41.856101:to generate a new masked version of the input.\n"
+      "181102-12:14:19,690 interface INFO:\n",
+      "\t stderr 2018-11-02T12:14:19.690109:\u001b[7m*+ WARNING:\u001b[0m   If you are performing spatial transformations on an oblique dset, \n",
+      "181102-12:14:19,691 interface INFO:\n",
+      "\t stderr 2018-11-02T12:14:19.690109:  such as /home/julia/projects/lc/processed/LC_rsfMRI_07/struct/single_vols/struct_vol0_corrected.nii.gz,\n",
+      "181102-12:14:19,692 interface INFO:\n",
+      "\t stderr 2018-11-02T12:14:19.690109:  or viewing/combining it with volumes of differing obliquity,\n",
+      "181102-12:14:19,695 interface INFO:\n",
+      "\t stderr 2018-11-02T12:14:19.690109:  you should consider running: \n",
+      "181102-12:14:19,696 interface INFO:\n",
+      "\t stderr 2018-11-02T12:14:19.690109:     3dWarp -deoblique \n",
+      "181102-12:14:19,698 interface INFO:\n",
+      "\t stderr 2018-11-02T12:14:19.690109:  on this and  other oblique datasets in the same session.\n",
+      "181102-12:14:19,700 interface INFO:\n",
+      "\t stderr 2018-11-02T12:14:19.690109: See 3dWarp -help for details.\n",
+      "181102-12:14:19,700 interface INFO:\n",
+      "\t stderr 2018-11-02T12:14:19.690109:++ Oblique dataset:/home/julia/projects/lc/processed/LC_rsfMRI_07/struct/single_vols/struct_vol0_corrected.nii.gz is 2.072449 degrees from plumb.\n",
+      "181102-12:14:19,747 interface INFO:\n",
+      "\t stderr 2018-11-02T12:14:19.747137:oo     Warning 3dSkullStrip (/build/afni-16.2.07~dfsg.1/src/SUMA/SUMA_3dSkullStrip.c:1555):\n",
+      "181102-12:14:19,747 interface INFO:\n",
+      "\t stderr 2018-11-02T12:14:19.747137:Input dataset has a very low value range.\n",
+      "181102-12:14:19,748 interface INFO:\n",
+      "\t stderr 2018-11-02T12:14:19.747137:If stripping fails, repeat with option -fac 1000\n",
+      "181102-12:15:15,683 interface INFO:\n",
+      "\t stderr 2018-11-02T12:15:15.683178:3dSkullStrip: Pushing to Edge ...\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<nipype.interfaces.base.support.InterfaceResult at 0x7fb1bf47e780>"
+       "<nipype.interfaces.base.support.InterfaceResult at 0x7f8e66389860>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "skull = SkullStrip(in_file=out_dir + 'struct/single_vols/struct_vol0_corrected.nii.gz', \n",
-    "                   out_file=out_dir + 'struct/struct_mask.nii.gz', outputtype='NIFTI_GZ',\n",
-    "                   args='-rat -push_to_edge')\n",
+    "                   out_file=out_dir + 'struct/struct_masked.nii.gz', outputtype='NIFTI_GZ',\n",
+    "                   args='-rat -push_to_edge -orig_vol')\n",
     "\n",
     "skull.run()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "mask = nb.load(out_dir + 'struct/struct_mask.nii.gz').get_data()\n",
+    "mask = nb.load(out_dir + 'struct/struct_masked.nii.gz').get_data()\n",
     "binmask = np.where(mask>0, 1, 0)\n",
     "\n",
     "struct_masked = nb.load(out_dir + 'struct/struct_avg_corrected.nii.gz').get_data() * binmask"
@@ -227,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -242,16 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
