--- a/lc_rsfmri_struct.ipynb
+++ b/lc_rsfmri_struct.ipynb
@@ -219,7 +219,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mask = nb.load(out_dir + 'struct/struct_masked.nii.gz').get_data()\n",
@@ -384,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
